Finished Page Rewrite
Modeled page after NMCFP

--- a/html/style.css
+++ b/html/style.css
@@ -1,8 +1,9 @@
 html {
-	background: url('../images/pattern.png');
+	background: #BEBEBE url('../images/pattern.png');
 	margin: 0;
-	padding: 0; }
-	
+	padding: 0;
+}
+
 header, section, footer, aside, nav, main, article, figure { 
 	display: block; 
 }
@@ -67,8 +68,10 @@ header, section, footer, aside, nav, main, article, figure {
 	display: block;
 	border: 0;
 	margin: 0 auto;
-	width:802px;
-	height:60px;
+	width:786px;
+	padding: 8px;
+	height:38px;
+	padding-bottom: 10px;
 	background: #CDCCCC;
 }
 
