--- a/html/style.css
+++ b/html/style.css
@@ -163,14 +163,14 @@ nav ul li {
 
 nav ul li a {
 	display: block;
-	padding: 11px 12px;
+	padding: 11px 11px;
 	color: #666;
 	text-decoration: none;
 }
 
-nav ul li:hover {
-	background: #f5f5f5;
-	border-bottom: 2px solid #DDD;
+nav ul li:hover:not(.button) {
+    background: #f5f5f5;
+    border-bottom: 2px solid #DDD;
 }
 
 nav ul li:hover > ul {
@@ -235,7 +235,7 @@ nav ul ul li a:hover {
 .link:visited {
 	font-family: Arial, Helvetica, sans-serif;
 	text-decoration: none;
-	color: #eee;
+	color: #9E9E9E;
 }
 
 .red_button {
@@ -272,6 +272,7 @@ nav ul ul li a:hover {
 	text-decoration:none;
 	text-align:center;
 	text-shadow:1px 1px 0px #b23e35;
+        padding: 0px;
 }
 
 .red_button:hover {
@@ -285,7 +286,6 @@ nav ul ul li a:hover {
 	position:relative;
 	top:1px;
 }
-
 .green_button {
 	-moz-box-shadow:inset 0px 1px 0px 0px #d9fbbe;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #d9fbbe;
